# JasonDB

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test.yml
cli/: en-gb.yaml
jasondb/: Cargo.toml  README.md
jasondb-server/: Cargo.toml  README.md
jasondb-server/cli/: en-gb.yaml
jasondb-server/src/: cli.rs  extract.rs  isam_mirror.rs  main.rs  request.rs
jasondb-server/src/net/: mod.rs  tcp.rs  ws.rs
jasondb/src/: database.rs  error.rs  id.rs  isam.rs  lib.rs  macros.rs  query.rs  replica.rs  tar.rs
jasondb/src/sources/: file.rs  memory.rs  mod.rs
jasondb/src/tests/: file.rs  in_memory.rs  index.rs  iter.rs  json.rs  macros.rs  main.rs  mock.rs  mod.rs  null.rs  query.rs  replica.rs
jasondb/src/tests/file/: database.rs  raw_data.rs
jasondb/src/tests/in_memory/: database.rs  mod.rs  raw_data.rs
jasondb/src/util/: indexing.rs  mod.rs  quiet_assert.rs
sdk/: package-lock.json  package.json  tsconfig.json  webpack.config.js
sdk/src/: collection.js  collection.ts  index.js  index.ts  request.js  request.ts
src/: cli.rs  database.rs  extract.rs  isam.rs  main.rs  request.rs  ws.rs
src/net/: tcp.rs  ws.rs
src/tests/: json.rs  main.rs  mod.rs  request.rs
