[package]
name = "jasondb"
version = "0.1.0"
authors = ["William Henderson <william-henderson@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json="1.0"
tar = "0.4.33"
tokio = "1.5.0"
tokio-tungstenite = "0.14.0"